fix: whitespaces display on post

--- a/src/app/components/post/posts.component.scss
+++ b/src/app/components/post/posts.component.scss
@@ -36,6 +36,7 @@
             line-height: normal;
             word-wrap: break-word;
             word-break: break-word;
+            white-space: pre-line;
             hyphens: auto;  
             @media screen and (max-width: calc($md - $eps)) {
                 font-size: 20px;
